[fix]#8116 responsive notifications and fix text overflow on dislexics

--- a/css/icons.less
+++ b/css/icons.less
@@ -1758,11 +1758,11 @@ input-password{
 
 // timeline support notif avatar
 i.system-avatar {
-    border-radius: 27px;
-    height: 55px;
+    border-radius: 50%;
+    height: 75px;
+    width: 75px;
     border: 0;
     display: block;
-    width: 55px;
     background-image: url(../img/illustrations/system-avatar.svg);
     background-position: center;
     background-size: 100%;
