--- a/css/mobile.less
+++ b/css/mobile.less
@@ -1,4 +1,10 @@
-
+@media screen and (max-width: 1200px){
+	.login{
+		h1{
+			display: none;
+		}
+	}
+}
 @media screen and (max-width: 959px) {
 
 	//workspace carousel
@@ -133,7 +139,8 @@
 		top: 52px;
 	}
 	.notification article .notification-date{
-		right: 0;
+		right: 10px;
+		top: 8px;
 	}
 	body{
 	.mobile-nav-opener{
@@ -148,11 +155,13 @@
 		}
 	}
 }
-
-@media screen and (max-width: 1200px){
-	.login{
-		h1{
-			display: none;
+@media screen and (max-width: 550px){
+	body{
+		.notification{
+			.content {
+				margin: 20px 10px 5px;
+			}
 		}
 	}
+
 }
