--- a/css/modules.less
+++ b/css/modules.less
@@ -1340,17 +1340,20 @@ article.list-view{
 			left: -72px;
 			top: 5px;
             height: auto;
+			float: left;
+			margin-top: -15px;
 			img{
-				border-radius: 27px;
-				height: 55px;
+				height: 75px;
+				display: block;
+				border-radius: 50%;
 				border: 1px solid #eee;
 			}
 		}
 	}
 	.content{
 		padding: 0;
-		float: left;
-		width: 85%;
+		width: auto;
+		margin: 15px 0;
 	}
 }
 
