--- a/dyslexic/theme.less
+++ b/dyslexic/theme.less
@@ -104,3 +104,6 @@ i side-panel{
   padding: 0;
   height: 30px;
 }
+.notification article .notification-date{
+	top: 3px;
+}
